--- a/mihomo/discord.yaml
+++ b/mihomo/discord.yaml
@@ -3,3 +3,5 @@ payload:
   - PROCESS-NAME,Discord.exe
   - DOMAIN-SUFFIX,discord.com
   - DOMAIN-SUFFIX,discord.gg
+  - DOMAIN-SUFFIX,discord.media
+  - DOMAIN-SUFFIX,discordapp.com
