--- a/mihomo/steam.yaml
+++ b/mihomo/steam.yaml
@@ -25,3 +25,4 @@ payload:
   - DOMAIN-SUFFIX,steamcommunity.com
   - DOMAIN-SUFFIX,steampowered.com
   - DOMAIN-SUFFIX,steam-chat.com
+  - DOMAIN-SUFFIX,steamusercontent.com
