--- a/mihomo/discord.yaml
+++ b/mihomo/discord.yaml
@@ -2,6 +2,11 @@ payload:
   - PROCESS-NAME,discord
   - PROCESS-NAME,Discord.exe
   - DOMAIN-SUFFIX,discord.com
+  - DOMAIN-SUFFIX,discordapp.com
   - DOMAIN-SUFFIX,discord.gg
   - DOMAIN-SUFFIX,discord.media
-  - DOMAIN-SUFFIX,discordapp.com
+  - DOMAIN-SUFFIX,discordapp.net
+  - DOMAIN-SUFFIX,discordstatus.com
+  - DOMAIN-SUFFIX,dis.gd
+  - DOMAIN-SUFFIX,discordcdn.com
+
