--- a/allow-only-mihomo-and-happ.json
+++ b/allow-only-mihomo-and-happ.json
@@ -43,7 +43,10 @@
           "caseSensitive": false
         }
       ],
-      "responseType": "MIHOMO"
+      "responseType": "MIHOMO",
+      "responseModifications": {
+        "subscriptionTemplate": "mihomosh-entry"
+      }
     },
     {
       "name": "Xray Checker",
